Item name for VIEW added to find_field_in_table (BUG#5147)